# ETASCatGen

./: README.md  meson.build  pyproject.toml  setup.py
cpp/include/etascatgen/: etascatgen.hpp
cpp/src/: catgen_M_t.cpp
etascatgen/: __init__.py  backend.pyx
